--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
       <div class="receipe-img">
-          <img src="assets/images/image-omelette.jpeg" alt="Omelette Image">
+          <img src="image-omelette.jpeg" alt="Omelette Image">
       </div>
 
       <div class="receipe-information">
